refactor: send locale to serializers to allow correct translation. added new entries in entities. added twig to handle pdf request

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
-FROM php:8.4-fpm
+FROM php:8.4-fpm-bookworm
 
 RUN apt-get update && apt-get install -y \
-    git unzip zip curl libpq-dev libonig-dev libxml2-dev \
+    git unzip zip curl libpq-dev libonig-dev libxml2-dev wkhtmltopdf \
     && docker-php-ext-install pdo pdo_pgsql
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
